<resources>
    <string name="app_name">AlmuerzaFacil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Formulario Strings
    <string name="FormularioTituloCreandoAlmuerzo">Creando Almuerzo</string>
    <string name="NombreAlmuerzo">Nombre del Almuerzo</string>
    <string name="DescripcionAlmuerzo">Descripcion del Almuerzo</string>
    <string name="ValorAlmuerzo">Valor del Almuerzo</string>
    <string name="ImagenAlmuerzo">Imagen del Almuerzo</string>
    //Botones
    <string name="BotonSubirAlmuerzo">Crear Almuerzo</string>
    <string name="BotonAgendar">Agendar</string>
    <string name="BotonVerAlmuerzosAgendados">Almuerzos Agendados</string>
    // Login
    <string name="prompt_IniciarSesion">Iniciar sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_correo">Correo electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenid@ a Almuerzafacil !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Iniciar sesion"</string>
    <string name="sign_in">"Registrarse"</string>
    <string name="sign_in_title">"Registra tu cuenta"</string>
    <string name="name_client">"Nombre"</string>
    <string name="lastname_client">"Apellido"</string>
    <string name="phone">"Teléfono/Celular"</string>
    <string name="volver">"Volver"</string>

    //Config agendar
    <string name="OpcionComer1">"Para servir"</string>
    <string name="OpcionComer2">"Para llevar "</string>
    <string name="HoraDeRetiro">"Hora para retirar"</string>
    <string name="AgendarAlmuerzoBtn">"Agendar"</string>
    <string name="CantidadAlmuerzosAgendados">"Cantidad"</string>
    <string name="AgregarAlmuerzos">"Agregar Almuerzo"</string>

    //dias de la semana
    <string name="diasDisponibles">"Días disponibles"</string>
    <string name="diaLunes">"Lunes"</string>
    <string name="diaMartes">"Martes"</string>
    <string name="diaMiercoles">"Miércoles"</string>
    <string name="diaJueves">"Jueves"</string>
    <string name="diaViernes">"Viernes"</string>
    <string name="diaSabado">"Sábado"</string>
    <string name="diaDomingo">"Domingo"</string>

    //HomeCliente
    <string name="agendarAlmuerzo">"Agendar almuerzos"</string>
    <string name="verAlmuerzosAgendados">"Ver almuerzos agendados"</string>

    //HomeEmpresa
    <string name="titleHomeCompany">"Bienvenid@ \nAdministrador"</string>
    <string name="createALunch">"Crear un almuerzo"</string>
    <string name="seePendingOrders">"Ver almuerzos agendados"</string>
    <string name="uploadLunch">"Subir almuerzo"</string>

    //Publicar almuerzos empresa
    <string name="postLunchesTitle">"Almuerzos disponibles"</string>
    <string name="postLunchesButton">"Publicar almuerzos seleccionados"</string>

    //Ordenes del cliente
    <string name="ClientsOrdersTitle">"Mis pedidos"</string>

    //Toolbar empresa
    <string name="toolbarTitleAddLunch">"Añadir almuerzos"</string>
    <string name="toolbarTitleOrdersCompany">"Todos los pedidos"</string>
    <string name="toolbarTitleLunchesDayCompany">"Almuerzos del día"</string>
    <string name="toolbarTitlePostLunches">"Añadir nuevos almuerzos"</string>

    //Toolbar clientes
    <string name="toolbarTitleClientSelectLunches">"Seleccionalos almuerzos"</string>
    <string name="toolbarTitleOrderALunchSettings">"Configura tu almuerzo"</string>
    <string name="toolbarTitleOrderOfClient">"Mis pedidos"</string>

</resources>