<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2C740"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Authentication.ui.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/demibold2"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorBrownPalette"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/emailEditTextLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="@font/regular2"
        android:hint="@string/prompt_correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#463C33" />

    <EditText
        android:id="@+id/passwordEditTextLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#FD6868"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="@font/regular2"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#463C33" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorOrangePalette"
        android:fontFamily="@font/demibold2"
        android:shadowColor="#673AB7"
        android:text="@string/login"

        />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorBrownPalette"
        android:fontFamily="@font/demibold2"
        android:text="@string/sign_in" />
</LinearLayout>