<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhitePalette"
    android:visibility="visible"
    tools:context=".HomeCompany"
    tools:visibility="visible">

    <Button
        android:id="@+id/BtnCreateLunchHomeComany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/colorGreenPalette"
        android:fontFamily="@font/demibold2"
        android:text="@string/createALunch"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleHomeCompany" />

    <Button
        android:id="@+id/BtnUploadLunchesHomeCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorGreenPalette"
        android:fontFamily="@font/demibold2"
        android:text="@string/uploadLunch"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnCreateLunchHomeComany" />

    <Button
        android:id="@+id/BtnSeePendingOrdersHomeCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorGreenPalette"
        android:fontFamily="@font/demibold2"
        android:text="@string/seePendingOrders"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnUploadLunchesHomeCompany" />

    <TextView
        android:id="@+id/titleHomeCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/demibold2"
        android:gravity="center"
        android:text="@string/titleHomeCompany"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- NavHostFragment para manejar la navegación -->

</androidx.constraintlayout.widget.ConstraintLayout>
